Fix width on mobile devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -412,6 +412,7 @@
 
 .app-ocdownloader #app-content #app-content-wrapper {
   flex-wrap: wrap;
+	min-width: 800px
 }
 
 .app-ocdownloader #app-content-wrapper .content-page {
